2013-07-18 Simon Large
    * src/arguments.c
      Ignore "No device found" errors due to reporting the wrong interface
      class as several Atmel devices seem to fail on this now.

2013-07-18 Simon Large
    * configure.ac
      Use the correct linker argument to specify the path for libusb-1.0.

2013-05-10 Simon Large
    * config.h
      Move config.h into the src directory for consistency and delete
      the generated config.h.in from the repository.

2013-05-10 Walker Inman
    * README
      Add some more hints to make first-time build easier.

2013-05-10 Simon Large
    * docs/dfu-programmer.1 docs/dfu-programmer.html src/arguments.c
      src/arguments.h src/atmel.c src/atmel.h src/commands.c src/dfu.c
      src/main.c src/intel_hex.c
      Improve whitespace consistency and remove trailing whitespace.

2013-04-04 Simon Large
    * src/commands.c
      Clarify some error messages and suggest that a validation
      fail may be due to not erasing first.

2013-04-04 Simon Large
    * doc/dfu-programmer.1 doc/dfu-programmer.html
      Document the fact that dfu-programmer requires separate erase
      and program commands, unlike BatchISP.

2013-02-22 Simon Large
    * configure.ac
      When building Configure on a system that does not have pkg-config
      installed, supply the default include and lib paths for libusb-1.0.

2013-02-21 Simon Large
    * doc/dfu-programmer.1 doc/dfu-programmer.html
      Apply patch sent by David Nelson and copy into the html help too.

2013-02-21 Simon Large
    * src/commands.c src/arguments.c src/arguments.h
      src/dfu.c src/dfu.h src/main.c AUTHORS
      Apply patch sent by David Nelson to add support for using a specific
      usb bus and device, to add device serialisation, add a new AVR32 device
      and clean up some output.

2013-01-24 Simon Large
    * doc/dfu-programmer.1 doc/dfu-programmer.html
      Update the documentation.

2013-01-23 Simon Large
    * src/commands.c src/arguments.c